--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,10 +12,14 @@
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-hot-toast": "^2.4.1"
+    "react-hot-toast": "^2.4.1",
+    "winston": "^3.11.0"
   },
   "devDependencies": {
+    "@types/node": "20.11.16",
+    "@types/react": "18.2.53",
     "eslint": "^8",
-    "eslint-config-next": "14.1.0"
+    "eslint-config-next": "14.1.0",
+    "tailwindcss": "^3.4.1"
   }
 }
